--- a/VueWebCode/package.json
+++ b/VueWebCode/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "svg-captcha": "^1.4.0",
+    "vee-validate": "^2.2.13",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
